# redact-renderer-example

./: .gitignore  Cargo.toml  Earthfile  README.md
random-not-cherry-picked/: random0.json  random0.mid  random1.json  random1.mid  random2.json  random2.mid  random3.json  random3.mid  random4.json  random4.mid  random5.json  random5.mid  random6.json  random6.mid  random7.json  random7.mid  random8.json  random8.mid  random9.json  random9.mid
src/: chord_progression.rs  main.rs  melody.rs  orchestration.rs  parts.rs  structure.rs  util.rs
