[package]
name = "redact-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
redact-composer = { path = "../redact-composer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
typetag = "0.2.8"
