[package]
name = "redact-example"
version = "0.1.0"
authors = ["Doug Stoeckmann <dousto@gmail.com>"]
edition = "2021"

[dependencies]
redact-composer = { version = "0.3.2", path = "../redact-composer/redact-composer" }
typetag = "0.2.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
num = "0.4.2"
rand = "0.8.5"
twox-hash = { version = "1.6.3", default-features = false, features = [] }
log = { version = "0.4.21", features = [] }
env_logger = "0.11.3"
